--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -54,9 +54,8 @@
 </head>
 <body>
 
-    
+    {% include 'header.njk' %}
     {{content | safe}}
-
     {% include 'footer.njk' %}
 
 	<!-- jQuery -->
